# boozx

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_li383_basic.py  example_li383_resolution_scan.py  example_li383_wireframe.py
src/booz_xform_jax/: __init__.py  booz_xform.py  core.py  io_utils.py  plots.py  vmec.py
tests/: __init__.py  test_plots.py  test_python.py  test_regression.py  test_write_read.py
